# Join the discord in the client tab on the main menu to stay up to date on new stuff.

# Version 8.0
 * Updated to v7
 * Many systems reworked/improved internally due to changes in the game's code
 * Improved ctrl + f speed significantly
 * Made nydus launch pad bullets not render (the servers till sends tons of packets so it still kills wifi but oh well)
 * Fixed a problem with navigation that could cause it to not work correctly when playing the flood gamemode
 * Added !distance command to change the distance multiplier of assist, the default is 1.5
 * Ctrl clicking a name in the player list will copy a simple js script to get the player: Groups.player.getByID(id)
 * Added a setting to hide banned blocks from the block list.
 * The !cc command will now state current command center status when run without arguments


# Version 7.3.0
 * Fixed an issue in buildpath where !builder belts and !builder drill would only partially upgrade each building
 * Reworks to buildpath, hopefully its faster?
 * Removed debug logging that shouldn't have been left in
 * Fixed monofont disable option for real
 * Disabled monofont by default for everyone
 * Merged the normal font with the monofont so that it displays characters that arent included in the font (they do look janky though)
 * Made the numbers in the normal font monospaced, they dont look too different but are readable when they are changing a lot 0123456789
 * Added fallback discord presence for older java versions
 * Added setting to find all non bundle strings
 * Made some progress towards localization of the client, many of the strings are now in bundle and can be translated (its nowhere near done but its a start)
 * Fixed an issue where formation units weren't being displayed as such in tile logs
 * Fixed an issue in tile logs where a half built/broken block being destroyed would display something along the lines of "build1"