@@ -71,7 +71,7 @@ client.command.marker.added = Successfully added a new marker at ({0}, {1})
 client.command.js.description = Runs JS on the client
 client.command.serverjs.description = Runs JS on the client as well as the server
 client.command.cc.description = Configure your team's command center easily
-client.command.cc.invalid = [scarlet]Invalid setting specified, valid options are: Attack (a), Rally (r), Idle (i)
+client.command.cc.invalid = [scarlet]Invalid setting specified, valid options are: Attack (a), Rally (r), Idle (i)\nIt is currently set to: {0}
 client.command.cc.success = [accent]Successfully set the command center to {0}
 client.command.cc.notfound = [scarlet]No command center was found on your team, one is required for this to work
 client.command.togglesign.description = Toggles the signing of messages on and off (whether or not your messages can be green for other players)
@@ -80,7 +80,7 @@ client.command.networking.description = Check the current status of the client n
 client.command.e.description = Send an encrypted chat message
 client.command.fixpower.description = [accent]Connects all power grids (unless they're insulated or dioded)
 client.command.fixpower.success = [accent]Successfully connected {0} power grids
-client.command.fixpower.confirm = [accent]Run "!fixpower c" to connect {0} buildings/grids, there are currently {1} grids
+client.command.fixpower.confirm = [accent]Run [coral]!fixpower c[] to connect {0} buildings/grids, there are currently {1} grids
 
 client.unitpicker = Unit Picker
 client.unitpicker.success = Successfully swapped units
