@@ -115,7 +115,7 @@ public class Reconstructor extends UnitBlock{
         }
 
         public float ticksRemaining(){
-            return (constructTime - progress) / timeScale / Vars.state.rules.unitBuildSpeedMultiplier;
+            return (constructTime - progress) / efficiency() / timeScale / Vars.state.rules.unitBuildSpeedMultiplier;
         }
 
         @Override
